--- a/css/video-media.css
+++ b/css/video-media.css
@@ -38,7 +38,7 @@
 
 .video-media-content {
     display: grid;
-    grid-template-columns: 1.1fr 0.9fr;
+    grid-template-columns: 1fr;
     gap: 50px;
     margin-top: 40px;
     align-items: stretch;
@@ -166,7 +166,7 @@
     transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
     height: 100%;
-    min-height: 500px;
+    min-height: 300px;
 }
 
 .video-thumbnail-card:hover {
@@ -186,7 +186,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    min-height: 500px;
+    min-height: 300px;
     overflow: hidden;
     background: #000;
 }
