--- a/css/about.css
+++ b/css/about.css
@@ -240,8 +240,9 @@
 
 .founder-name-title {
   display: flex;
-  /* flex-direction: column; */
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
   gap: 5px;
 }
 
@@ -328,7 +329,7 @@
   .founder-section {
     gap: 20px;
     padding: 20px;
-    margin-top: 25px;
+    margin-top: 15rem;
   }
 
   .founder-name {
@@ -407,8 +408,16 @@
     text-align: center;
     gap: 15px;
     padding: 20px;
-    margin-top: 20px;
+    /* margin-top: 20px; */
   }
+
+    .founder-name-title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
 
   .founder-image {
     width: 90px;
@@ -421,11 +430,12 @@
 
   .founder-title {
     font-size: 0.9rem;
+    text-align: center;
   }
 
   .founder-description {
     font-size: 0.85rem;
-    text-align: left;
+    text-align: center !important;
   }
 }
 
@@ -476,9 +486,11 @@
 
   .founder-section {
     padding: 15px;
-    margin-top: 15px;
+    margin-top: 12rem;
     gap: 12px;
   }
+
+
 
   .founder-image {
     width: 80px;
