--- a/css/carousel.css
+++ b/css/carousel.css
@@ -59,7 +59,7 @@
     display: flex;
     align-items: center;
     z-index: 10;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 50%, transparent 100%);
+    /* background: linear-gradient(to right, rgba(0, 0, 0, 0.6) 0%, rgba(0, 0, 0, 0.3) 50%, transparent 100%); */
 }
 
 .content-wrapper {
