--- a/css/media.css
+++ b/css/media.css
@@ -32,7 +32,7 @@
     transform: translateX(-50%);
     width: 80px;
     height: 4px;
-    background: linear-gradient(to right, #007bff, #0056b3);
+    background: linear-gradient(to right, #d2a557, #e8cc87);
     border-radius: 2px;
 }
 
@@ -165,7 +165,7 @@
 }
 
 .media-article:hover .media-article-read-more {
-    color: #007bff;
+    color: #d2a557;
 }
 
 /* Responsive Design */
